// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Correct context provided: activities after mount 1`] = `
Array [
  Array [
    Object {
      "activity": Object {
        "activityKey": "key",
        "activityType": "before",
        "data": Object {
          "foo": "bar",
        },
      },
      "device": Object {
        "appBuildNumber": "100",
        "appFirstInstallTime": "01/01/2019",
        "appReadableVersion": "version 100",
        "appState": "active",
        "deviceBrand": "apple",
        "deviceDataLoaded": true,
        "deviceModel": "iphone 2000",
        "deviceName": "iphone",
        "deviceOS": "iphone os os 1000",
        "deviceTypeId": "device ID",
        "deviceUniqueId": "unique ID",
        "osName": "iphone os",
      },
      "user": Object {
        "brandingTitle": "Testing",
        "userEmail": "harry.potter@example.com",
        "userId": "12345",
        "userName": "Harry Potter",
      },
    },
  ],
  Array [
    Object {
      "activity": Object {
        "activityKey": "key",
        "activityType": "test",
        "data": Object {
          "foo": "bar",
        },
      },
      "device": Object {
        "appBuildNumber": "100",
        "appFirstInstallTime": "01/01/2019",
        "appReadableVersion": "version 100",
        "appState": "active",
        "deviceBrand": "apple",
        "deviceDataLoaded": true,
        "deviceModel": "iphone 2000",
        "deviceName": "iphone",
        "deviceOS": "iphone os os 1000",
        "deviceTypeId": "device ID",
        "deviceUniqueId": "unique ID",
        "osName": "iphone os",
      },
      "user": Object {
        "brandingTitle": "Testing",
        "userEmail": "harry.potter@example.com",
        "userId": "12345",
        "userName": "Harry Potter",
      },
    },
  ],
]
`;

exports[`Correct context provided: full context 1`] = `
Array [
  Array [
    Object {
      "appBuildNumber": "100",
      "appFirstInstallTime": "01/01/2019",
      "appReadableVersion": "version 100",
      "appState": "active",
      "deviceBrand": "apple",
      "deviceDataLoaded": true,
      "deviceModel": "iphone 2000",
      "deviceName": "iphone",
      "deviceOS": "iphone os os 1000",
      "deviceTypeId": "device ID",
      "deviceUniqueId": "unique ID",
      "osName": "iphone os",
    },
  ],
  Array [
    Object {
      "appBuildNumber": "100",
      "appFirstInstallTime": "01/01/2019",
      "appReadableVersion": "version 100",
      "appState": "active",
      "deviceBrand": "apple",
      "deviceDataLoaded": true,
      "deviceModel": "iphone 2000",
      "deviceName": "iphone",
      "deviceOS": "iphone os os 1000",
      "deviceTypeId": "device ID",
      "deviceUniqueId": "unique ID",
      "osName": "iphone os",
    },
  ],
]
`;

exports[`Correct context provided: initial context 1`] = `
Array [
  Array [
    Object {
      "appBuildNumber": null,
      "appFirstInstallTime": null,
      "appReadableVersion": null,
      "appState": "active",
      "deviceBrand": null,
      "deviceDataLoaded": false,
      "deviceModel": null,
      "deviceName": null,
      "deviceOS": null,
      "deviceTypeId": null,
      "deviceUniqueId": null,
      "osName": null,
    },
  ],
]
`;

exports[`Correct context provided: initial state 1`] = `
Object {
  "deviceData": Object {
    "appBuildNumber": null,
    "appFirstInstallTime": null,
    "appReadableVersion": null,
    "appState": "active",
    "deviceBrand": null,
    "deviceDataLoaded": false,
    "deviceModel": null,
    "deviceName": null,
    "deviceOS": null,
    "deviceTypeId": null,
    "deviceUniqueId": null,
    "osName": null,
  },
  "eventLog": Array [],
  "storedDataLoaded": false,
  "versionAccepted": true,
}
`;

exports[`Correct context provided: no activities before mounting done 1`] = `Array []`;

exports[`Correct context provided: state after ticks 1`] = `
Object {
  "deviceData": Object {
    "appBuildNumber": "100",
    "appFirstInstallTime": "01/01/2019",
    "appReadableVersion": "version 100",
    "appState": "active",
    "deviceBrand": "apple",
    "deviceDataLoaded": true,
    "deviceModel": "iphone 2000",
    "deviceName": "iphone",
    "deviceOS": "iphone os os 1000",
    "deviceTypeId": "device ID",
    "deviceUniqueId": "unique ID",
    "osName": "iphone os",
  },
  "eventLog": Array [
    Object {
      "activity": Object {
        "activityKey": "key",
        "activityType": "before",
        "data": Object {
          "foo": "bar",
        },
      },
      "device": Object {
        "appBuildNumber": "100",
        "appFirstInstallTime": "01/01/2019",
        "appReadableVersion": "version 100",
        "appState": "active",
        "deviceBrand": "apple",
        "deviceDataLoaded": true,
        "deviceModel": "iphone 2000",
        "deviceName": "iphone",
        "deviceOS": "iphone os os 1000",
        "deviceTypeId": "device ID",
        "deviceUniqueId": "unique ID",
        "osName": "iphone os",
      },
      "user": Object {
        "brandingTitle": "Testing",
        "userEmail": "harry.potter@example.com",
        "userId": "12345",
        "userName": "Harry Potter",
      },
    },
  ],
  "storedDataLoaded": false,
  "versionAccepted": true,
}
`;
